# zed-text-marker

./: .gitignore  CLAUDE.md  LICENSE  README.md
assets/: keymap.json  tasks.json
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
server/: Cargo.toml
server/src/: cli.rs  lib.rs  lsp.rs  main.rs  marks.rs  matcher.rs
server/src/commands/: clear.rs  install.rs  mod.rs  serve.rs  toggle.rs
server/tests/: install_test.rs  integration_test.rs  lsp_test.rs  marks_test.rs  matcher_test.rs
