[package]
name = "text-marker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "text-marker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
notify = "6"

[dev-dependencies]
tempfile = "3"
